dev/ngrinder/controller/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ngrinder-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: ngrinder.htdp1.kubepia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: ngrinder-controller
          servicePort: 80
